[package]
name = "wtkiss3d"
version = "0.1.0"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf = "0.15"
image = { version = "0.22", default-features = false, features = ["jpeg", "png"] }
kiss3d = "0.26"
ureq = "1.5"
url = "2.1"
