[package]
name = "wtkiss3d"
version = "0.1.0"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
# async-std = { version = "1.6", features = ["attributes"] }
futures-util = "0.3"
gltf = { version = "0.15", default-features = false, features = ["names", "utils"] }
image = { version = "0.22", default-features = false, features = ["jpeg", "png"] }
kiss3d = "0.26"
surf = { version = "2.1", default-features = false, features = ["encoding", "wasm-client"] }
url = "2.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wee_alloc = "0.4"

[profile.dev]
lto = 'thin'
opt-level = 1

[profile.release]
lto = true
opt-level = "s"
